{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "MovesMap",
            "id": "48475289-67de-49a3-a054-97854cbfb031",
            "actions": [
                {
                    "name": "HorizontalMove",
                    "type": "Value",
                    "id": "415c015d-96fc-4f1a-82c6-c309046f0286",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "JumpMove",
                    "type": "Button",
                    "id": "c9d8cfd8-c059-41e3-aea6-31d001ca9e49",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Acionar",
                    "type": "Button",
                    "id": "01c3cf38-eca6-4a72-b5ef-138d872dbb4f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Atacar",
                    "type": "Button",
                    "id": "98ac09e4-ce11-43e2-9c25-18985b019273",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Trocar",
                    "type": "Button",
                    "id": "33827557-832d-47f9-91c7-b5137857ad1c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d3f5f995-1fdf-4dde-a7fd-5caeea69df7f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "2578b907-c18b-4388-93c0-86ea67a3bf67",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "bb32730c-3755-4a7d-a650-b20ed407b724",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "911f5b10-d268-4eee-9fba-e9ad7b586677",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "08fd8355-17d5-45c6-84d1-eecdc9d13940",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Acionar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72729819-8e6c-434d-ac19-434a7ef7cdb1",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Atacar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "073bb169-d7c4-445c-90e0-95bc4112dd32",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trocar",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}